# opencv_project

./: CMakeLists.txt  README.md  main.cpp
image_processing/: CMakeLists.txt  imageProcessor.cpp  imageProcessor.h
server/: CMakeLists.txt  serverMain.cpp  tcp_server.cpp  tcp_server.h
utils/: utils.h
